--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.litepal.android:core:1.6.0'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.github.GrenderG:Toasty:1.2.5'
+    compile 'com.alibaba:fastjson:1.1.67.android'
 }
